--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.12.2",
     "axios-retry": "^4.5.0",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "fs-extra": "^11.3.2",
